--- a/client/src/components/home/applications-list/Application.scss
+++ b/client/src/components/home/applications-list/Application.scss
@@ -63,12 +63,14 @@ background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(221,238,255,1) 5
     align-items: center;
     width: 32px;
     height: 32px;
+    border-radius: 5px;
     background-color: white;
     margin: 5px;
 }
 
 .icon {
     font-size: 24px;
+    color: #304ffe;
 }
 
 .application-info {
