Added Details Route + Page

--- a/client/src/components/home/applications-list/Application.scss
+++ b/client/src/components/home/applications-list/Application.scss
@@ -81,6 +81,7 @@ justify-content: space-between;
 .info-location {
     padding: 5px;
     border-radius: 5px;
+    color: black;
     background: rgb(245,245,245);
 background: linear-gradient(90deg, rgba(245,245,245,1) 0%, rgba(131,255,162,1) 87%, rgba(131,255,162,1) 100%);
 }
