--- a/client/src/components/navigation/NavBar.scss
+++ b/client/src/components/navigation/NavBar.scss
@@ -5,7 +5,7 @@
 .navbar {
     display: flex;
     flex-direction: column;
-    max-width: 100%;
+    min-width: 100%;
     background-color: white;
     padding-top: 5px;
    // padding-bottom: 5px;
