--- a/client/src/components/auth/login/Login.scss
+++ b/client/src/components/auth/login/Login.scss
@@ -11,7 +11,7 @@
     padding: 20px;
     background-color: white;
     width: 400px;
-    height: 400px;
+    min-height: 400px;
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
     border-radius: 5px;
     position: relative;
@@ -63,4 +63,12 @@
         }
     }
     }
+}
+.error{
+    background-color: red;
+    margin: 10px;
+    padding: 5px;
+    border-radius: 5px;
+    text-align: center;
+    color: white;
 }
