--- a/client/src/components/auth/register/Register.scss
+++ b/client/src/components/auth/register/Register.scss
@@ -72,3 +72,12 @@
     }
     }
 }
+
+.error{
+    background-color: red;
+    margin: 10px;
+    padding: 5px;
+    border-radius: 5px;
+    text-align: center;
+    color: white;
+}
