--- a/client/src/components/edit-job/Edit.scss
+++ b/client/src/components/edit-job/Edit.scss
@@ -73,3 +73,12 @@
     }
     }
 }
+
+.error{
+    background-color: red;
+    margin: 10px;
+    padding: 5px;
+    border-radius: 5px;
+    text-align: center;
+    color: white;
+}
