Implemented job save option

--- a/client/src/components/profile/created-jobs/CreatedJobs.scss
+++ b/client/src/components/profile/created-jobs/CreatedJobs.scss
@@ -1,9 +1,9 @@
 .created-jobs-conteiner{
     min-width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     justify-content: center;
-    align-items: center;
+    
    
     h2{
         color: black;
@@ -12,11 +12,13 @@
 
 .created-jobs {
     display: flex;
+    height: fit-content;
     flex-direction: column;
+    margin: 100px;
     padding: 20px;
     align-items: center;
      background-color: white;
-     width: 70%;
+     width: 40%;
      //height: 400px;
      box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
      border-radius: 5px;
@@ -26,4 +28,11 @@
 }
 .created-jobs-h2 {
     color: black;
+}
+
+.no-jobs {
+    padding: 5px;
+    text-align: center;
+    background-color: rgb(88, 199, 255);
+    border-radius: 5px;
 }
