--- a/client/src/components/create-job/Create.scss
+++ b/client/src/components/create-job/Create.scss
@@ -1,6 +1,6 @@
 .create-conteiner{
     min-width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -17,7 +17,7 @@
      box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
      border-radius: 5px;
      position: relative;
-
+     margin: 50px;
     .logo-create {
         margin: 15px 10px 10px 10px;
         display: flex;
