--- a/client/src/components/job-details/JobDetails.scss
+++ b/client/src/components/job-details/JobDetails.scss
@@ -1,6 +1,6 @@
 .app-details {
     min-width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -100,7 +100,7 @@ background: linear-gradient(90deg, rgba(245,245,245,1) 0%, rgba(131,255,162,1) 8
 
 .app-main-content {
     width: 70%;
-    height: 400px;
+    height: fit-content;
     background-color: white;
     margin-right: 10px;
     border-radius: 5px;
@@ -108,11 +108,24 @@ background: linear-gradient(90deg, rgba(245,245,245,1) 0%, rgba(131,255,162,1) 8
 
 .app-main-company {
     width: 30%;
-    height: 400px;
+    height: fit-content;
     background-color: white;
+    justify-content: center;
+    align-items: center;
     border-radius: 5px;
     display: flex;
     flex-direction: column;
+    color: black;
+    padding: 25px;
+
+    img {
+        width: 100px;
+        height: 100px;
+    }
+
+    h3{
+        margin-top: 0px;
+    }
 }
 
 .stack-icons-app {
@@ -141,8 +154,36 @@ background: linear-gradient(90deg, rgba(245,245,245,1) 0%, rgba(131,255,162,1) 8
 .main-h2 {
     color: black;
     padding: 0px 20px 20px 20px;
+    margin-bottom: 0px;
 }
 .main-ul {
     color: black;
     
+}
+
+.cant-save-own-job{
+    background-color: rgb(88, 199, 255);
+    margin: 10px;
+    padding: 5px;
+    border-radius: 5px;
+    text-align: center;
+}
+.save-btn-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.banner {
+    width: 90%;
+    margin: 0px 25px 25px 25px;
+}
+
+.owner-summary {
+    text-align: center;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 4;
+    -webkit-box-orient: vertical;
 }
