--- a/client/src/components/navigation/NavBar.scss
+++ b/client/src/components/navigation/NavBar.scss
@@ -160,7 +160,7 @@
 .profile-content{
     display: none;
     width: 250px;
-    height: 300px;
+    height: fit-content;
     flex-direction: column;
     background-color: white;
     border-radius: 5px;
