--- a/client/src/components/job-details/JobDetails.scss
+++ b/client/src/components/job-details/JobDetails.scss
@@ -167,6 +167,7 @@ background: linear-gradient(90deg, rgba(245,245,245,1) 0%, rgba(131,255,162,1) 8
     padding: 5px;
     border-radius: 5px;
     text-align: center;
+    color: white;
 }
 .save-btn-container {
     display: flex;
