--- a/client/src/components/profile/Profile.scss
+++ b/client/src/components/profile/Profile.scss
@@ -1,6 +1,6 @@
 .profile-conteiner{
     min-width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -17,6 +17,7 @@
      box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
      border-radius: 5px;
      position: relative;
+     margin: 50px;
     color: black;
      img#logo{
         width: 150px;
